# saaskit-cam-ios

./: .gitattributes  GoogleService-Info.plist  Info.plist  Podfile  README.md  readme.md
.github/workflows/: pre_release.yml
Classes/: Preprocessor.h
Classes/Native/: AndroidRuntimePermissions.Runtime.cpp  AndroidRuntimePermissions.Runtime_CodeGen.c  Assembly-CSharp-firstpass.cpp  Assembly-CSharp-firstpass1.cpp  Assembly-CSharp-firstpass2.cpp  Assembly-CSharp-firstpass_CodeGen.c  Assembly-CSharp.cpp  Assembly-CSharp1.cpp  Assembly-CSharp2.cpp  Assembly-CSharp3.cpp  Assembly-CSharp_CodeGen.c  BestHTTP.cpp  BestHTTP1.cpp  BestHTTP10.cpp  BestHTTP11.cpp  BestHTTP12.cpp  BestHTTP13.cpp  BestHTTP14.cpp  BestHTTP15.cpp  BestHTTP16.cpp  BestHTTP17.cpp  BestHTTP18.cpp  BestHTTP19.cpp  BestHTTP2.cpp  BestHTTP20.cpp  BestHTTP21.cpp  BestHTTP22.cpp  BestHTTP23.cpp  BestHTTP24.cpp  BestHTTP25.cpp  BestHTTP26.cpp  BestHTTP27.cpp  BestHTTP28.cpp  BestHTTP29.cpp  BestHTTP3.cpp  BestHTTP30.cpp  BestHTTP31.cpp  BestHTTP32.cpp  BestHTTP33.cpp  BestHTTP34.cpp  (+360 more)
Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  globalgamemanagers  globalgamemanagers.assets  globalgamemanagers.assets.resS  level0  level1  resources.assets  resources.assets.resS  sharedassets0.assets  sharedassets0.assets.resS  sharedassets0.resource
Data/Managed/: EditorToUnityLinkerData.json  MethodsToPreserve.xml  SerializedTypes.xml  TypesInScenes.xml  UnityLinkerToEditorData.json  response.rsp
Data/Raw/: google-services-desktop.json
Data/Resources/: unity_builtin_extra
Frameworks/Plugins/iOS/FlamCodeScanObj.framework/: CMakeLists.txt  Info.plist
Frameworks/Plugins/iOS/FlamCodeScanObj.framework/Headers/: FlamCodeScanObj.h  FlamScanCodeSDK.h  HelloWorldWrapper.h
Frameworks/Plugins/iOS/FlamCodeScanObj.framework/Modules/: module.modulemap
Frameworks/Plugins/iOS/FlamCodeScanObj.framework/_CodeSignature/: CodeResources
Frameworks/com.ptc.vuforia.engine/Vuforia/Plugins/iOS/VuforiaEngine.framework/: VuforiaEngine
Libraries/Plugins/iOS/: MyUnityAppController.mm  NativeCallProxy.h  NativeCallProxy.mm
Unity-iPhone.xcodeproj/: project.pbxproj
Unity-iPhone.xcodeproj/project.xcworkspace/xcuserdata/jvanku.xcuserdatad/: UserInterfaceState.xcuserstate
Unity-iPhone.xcodeproj/project.xcworkspace/xcuserdata/rajatbhalla.xcuserdatad/: UserInterfaceState.xcuserstate
Unity-iPhone.xcodeproj/project.xcworkspace/xcuserdata/sudeepsharma.xcuserdatad/: UserInterfaceState.xcuserstate
Unity-iPhone.xcodeproj/project.xcworkspace/xcuserdata/yash.xcuserdatad/: UserInterfaceState.xcuserstate
Unity-iPhone.xcodeproj/xcshareddata/xcschemes/: Unity-iPhone.xcscheme
Unity-iPhone.xcworkspace/xcuserdata/jvanku.xcuserdatad/: UserInterfaceState.xcuserstate
